--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "Jwtkey": {
+    "secretKey": "\\_d1*.MQ61;2'xGWk~{;HHl24DG&'N+m)D?7~2nanFpO\\7E?`O",
+    //Exemplo de Valor: "https://meuservico.com" ou um identificador como "my-service".
+    "issuer": "meu-servico-gerador-token",
+
+    //Exemplo de Valor: "https://meuservico.com/api" ou "my-api-client".
+    "audience": "gerador-token-backend"
+  },
+  "ConnectionStrings": {
+    "connectionString": "Host=localhost;Username=postgres;Password=postgres;Database=teste;Port=5433"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
